--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack serve --open",
     "build": "webpack"
   },
@@ -37,6 +37,8 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "jest": "^27.5.1",
     "lodash": "^4.17.21"
-  }
+  },
+  "main": "webpack.config.js"
 }
