--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "watch": "jest --watch *.js",
     "start": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "npm run gh-pages",
+    "gh-pages": "gh-pages -d dist -b gh-pages"
   },
   "repository": {
     "type": "git",
