Add screenshot for sharing

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/joel-kalema/webpack-templet.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "tylher",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/joel-kalema/webpack-templet/issues"
